--- a/site.cabal
+++ b/site.cabal
@@ -1,8 +1,8 @@
-name:                statgen
+name:                site
 version:             0.1.0.0
 synopsis:            A static site generated with Hakyll
 description:         Please see README.md
-homepage:            http://github.com/codebje/statgen#readme
+homepage:            http://github.com/codebje/hakyll-site#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Byron Ellacott
@@ -11,7 +11,7 @@ category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable statgen
+executable site
   main-is:             site.hs
   default-language:    Haskell2010
   ghc-options:         -threaded
