--- a/site.cabal
+++ b/site.cabal
@@ -3,7 +3,7 @@ version:             0.1.0.0
 synopsis:            A static site generated with Hakyll
 description:         Please see README.md
 homepage:            http://github.com/codebje/hakyll-site#readme
-license:             BSD3
+license:             MIT
 license-file:        LICENSE
 author:              Byron Ellacott
 copyright:           2015 Byron Ellacott
