--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "site",
   "private": true,
   "dependencies": {
-    "MathJax": "~2.5.3"
+    "MathJax": "~2.5.3",
+    "bootstrap": "~3.3.5"
   }
 }
